2005-03-14  Thomas Wood  <thos@gnome.org>

	* NEWS: Corrected
	* engines/crux/src/crux-draw.c: (paint_check): fixes bug 170113

2005-03-14  Andrew Johnson <ajgenius@ajgenius.us>

	* COPYING:
	* configure.ac:
	* engines/clearlooks/AUTHORS:
	* engines/clearlooks/CREDITS:
	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/bits.c:
	* engines/clearlooks/src/clearlooks_draw.c: 
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_rc_style.c:
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_theme_main.c: 
	* engines/clearlooks/src/support.c:
	* engines/clearlooks/src/support.h:

	add clearlooks engine
	
	* engines/smooth/src/interfaces/gdk2/src/gdk2_gradient_routines.c:

	check for empty width/height in gradient routine

2005-03-13  Andrew Johnson <ajgenius@ajgenius.us>

	* engines/smooth/src/interfaces/gdk2/src/gdk2_gradient_routines.c:
	(internal_create_vertical_gradient_image_buffer):
	* engines/smooth/src/utils/draw_arrows.c: (SmoothFreeArrowStyles):

	try and work around potential memcpy overlap

2005-03-11  Andrew Johnson  <ajgenius@ajgenius.us>

	* engines/crux/src/config.h.in:
		re-empty crux config template (tsk's thos)

	(merging changes from smooth cvs)
	
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.c:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.h:
	* engines/smooth/src/engine/smooth_gtk2_engine.c:
        * engines/smooth/src/utils/draw_arrows.c:
	* engines/smooth/src/utils/draw_arrows.h:

	ensure composite arrows immediately after parse i
	(to try and prevent memleaks on arrowless apps)
	
	* engines/smooth/src/interfaces/gdk2/src/gdk2_gradient_routines.c:
	* engines/smooth/src/interfaces/gdk2/src/gdk2_gradient_routines.h:

	enabled dither pixbuf gradients by default for vertical/horizontal
	gradients and use exponential memcpy's in block sizes of 2^n to